Add early-stage API implementing the `meta` mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 
+# Added manually
+
+### Cython ###
+pyrodigal/*.c
+
+
 # Created by https://www.gitignore.io/api/python,c
 # Edit at https://www.gitignore.io/?templates=python,c
 
