Add line profiling support when `--debug` flag is present on build

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ platform = any
 keywords = bioinformatics, genome, orf, gene, prodigal
 classifier =
     Development Status :: 4 - Beta
+    Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Programming Language :: C
@@ -22,8 +23,22 @@ classifier =
 [options]
 zip_safe = false
 setup_requires =
-    setuptools
-    cython
+    setuptools >=39.2
+    cython >=0.29.16
+
+[coverage:run]
+plugins = Cython.Coverage
+
+[coverage:report]
+include = pyrodigal/*
+show_missing = true
+exclude_lines =
+    pragma: no cover
+    if typing.TYPE_CHECKING:
+    @abc.abstractmethod
+    @abc.abstractproperty
+    raise NotImplementedError
+    return NotImplemented
 
 [mypy]
 disallow_any_decorated = true
