--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 ### Cython ###
 pyrodigal/*.c
-
+pyrodigal/*.html
 
 # Created by https://www.gitignore.io/api/python,c
 # Edit at https://www.gitignore.io/?templates=python,c
