Add Travis-CI configuration file

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ classifier =
 zip_safe = false
 setup_requires =
     setuptools >=39.2
-    cython >=0.29.16
+    cython ~=0.29.16
 
 [coverage:run]
 plugins = Cython.Coverage
