Add `pyproject.toml` to `.gitignore` so that it is not versioned

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+pyproject.toml
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
