--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.0
 author = Martin Larralde
 author-email = martin.larralde@embl.de
 home-page = https://github.com/althonos/pyrodigal
-description = Bindings to Prodigal, an ORF finder for genomes, progenomes and metagenomes.
+description = Python interface to Prodigal, an ORF finder for genomes, progenomes and metagenomes.
 long-description = file: README.md
 long_description_content_type = text/markdown
 license = GPLv3
