--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -2,3 +2,5 @@ twine ~=3.1               ;  python_version == "3.8"
 coverage ~=5.0
 codecov ~=2.0
 cython ~=0.29.16
+
+-r ../tests/requirements.txt
