--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyrodigal
-version = 0.1.0
+version = file: pyrodigal/_version.txt
 author = Martin Larralde
 author-email = martin.larralde@embl.de
 home-page = https://github.com/althonos/pyrodigal
@@ -22,9 +22,14 @@ classifier =
 
 [options]
 zip_safe = false
+packages = pyrodigal
+include_package_data = true
 setup_requires =
     setuptools >=39.2
     cython ~=0.29.16
+
+[options.package_data]
+pyrodigal = py.typed, _version.txt, *.pyi
 
 [coverage:run]
 plugins = Cython.Coverage
@@ -39,6 +44,7 @@ exclude_lines =
     @abc.abstractproperty
     raise NotImplementedError
     return NotImplemented
+    raise MemoryError()
 
 [mypy]
 disallow_any_decorated = true
