--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,17 @@ classifier =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Programming Language :: C
     Programming Language :: Cython
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps.
+project_urls =
+    Bug Tracker = https://github.com/althonos/pyrodigal/issues
+    Changelog = https://github.com/althonos/pyrodigal/blob/master/CHANGELOG.md
 
 [options]
 zip_safe = false
