--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -1,6 +1,7 @@
-twine ~=3.1               ;  python_version == "3.8"
+auditwheel ~=3.1
 coverage ~=5.0
 codecov ~=2.0
 cython ~=0.29.16
+twine ~=3.1              
 
 -r ../tests/requirements.txt
