Add link to the Zenodo page in `setup.cfg` [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ classifier =
 project_urls =
     Bug Tracker = https://github.com/althonos/pyrodigal/issues
     Changelog = https://github.com/althonos/pyrodigal/blob/master/CHANGELOG.md
+    Zenodo = https://doi.org/10.5281/zenodo.4015169
 
 [options]
 zip_safe = false
