--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,9 @@ include COPYING
 include CHANGELOG.md
 include README.md
 
+recursive-include tests *.py *.txt
+recursive-include tests/data *
+
 recursive-include Prodigal *.c *.h *.md VERSION LICENSE CHANGES Makefile
 recursive-include pyrodigal *.py *.pyi *.pyx *.pxd _version.txt py.typed
 recursive-exclude pyrodigal *.c
