Use `attr:` mechanism to extract version in `setup.py`

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyrodigal
-version = file: pyrodigal/_version.txt
+version = attr: pyrodigal.__version__
 author = Martin Larralde
 author-email = martin.larralde@embl.de
 home-page = https://github.com/althonos/pyrodigal
@@ -35,11 +35,11 @@ zip_safe = false
 packages = pyrodigal
 include_package_data = true
 setup_requires =
-    setuptools >=39.2
+    setuptools >=46.4
     cython ~=0.29.16
 
 [options.package_data]
-pyrodigal = py.typed, _version.txt, *.pyi
+pyrodigal = py.typed, *.pyi
 
 [coverage:run]
 plugins = Cython.Coverage
