--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ classifier =
     Programming Language :: Python :: Implementation :: PyPy
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps.
+    Typing :: Typed
 project_urls =
     Bug Tracker = https://github.com/althonos/pyrodigal/issues
     Changelog = https://github.com/althonos/pyrodigal/blob/master/CHANGELOG.md
