--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,10 +1,8 @@
 version: '{build}'
+image: "Visual Studio 2019"
 clone_depth: 5
 environment:
   matrix:
-  - PYTHON: "C:\\Python35-x64"
-    PYTHON_VERSION: "3.5"
-    PYTHON_ARCH: "64"
   - PYTHON: "C:\\Python36-x64"
     PYTHON_VERSION: "3.6"
     PYTHON_ARCH: "64"
@@ -13,6 +11,9 @@ environment:
     PYTHON_ARCH: "64"
   - PYTHON: "C:\\Python38-x64"
     PYTHON_VERSION: "3.8"
+    PYTHON_ARCH: "64"
+  - PYTHON: "C:\\Python39-x64"
+    PYTHON_VERSION: "3.9"
     PYTHON_ARCH: "64"
 
 cache:
