--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,9 @@ image: "Visual Studio 2019"
 clone_depth: 5
 environment:
   matrix:
+  - PYTHON: "C:\\Python35-x64"
+    PYTHON_VERSION: "3.5"
+    PYTHON_ARCH: "64"
   - PYTHON: "C:\\Python36-x64"
     PYTHON_VERSION: "3.6"
     PYTHON_ARCH: "64"
