--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Install build requirements
+      run: python -m pip install -r ci/requirements.txt
     - name: Build manylinux wheels
       uses: RalfG/python-wheels-manylinux-build@v0.3.3
       with:
@@ -109,4 +111,4 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        skip_existing: true
+        skip_existing: false
