--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ classifier =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Programming Language :: C
     Programming Language :: Cython
+    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -35,7 +36,7 @@ project_urls =
 zip_safe = false
 packages = pyrodigal
 include_package_data = true
-python_requires = >=3.6
+python_requires = >=3.5
 setup_requires =
     setuptools >=46.4
     cython ~=0.29.16
