Add the `OS Independent` classifier to the metadata in `setup.cfg`

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifier =
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Operating System :: OS Independent
     Programming Language :: C
     Programming Language :: Cython
     Programming Language :: Python :: 3.5
