--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -9,18 +9,38 @@ jobs:
   wheel-linux:
     runs-on: ubuntu-latest
     name: Build Linux wheels
+    strategy:
+      matrix:
+        include:
+        - python-version: 3.5
+          pyo3-python: /opt/python/cp35-cp35m/bin/python
+        - python-version: 3.6
+          pyo3-python: /opt/python/cp36-cp36m/bin/python
+        - python-version: 3.7
+          pyo3-python: /opt/python/cp37-cp37m/bin/python
+        - python-version: 3.8
+          pyo3-python: /opt/python/cp38-cp38/bin/python
+        - python-version: 3.9
+          pyo3-python: /opt/python/cp39-cp39/bin/python
+        - python-version: pypy-3.6
+          pyo3-python: /opt/pypy/pypy3.6-7.3.3/bin/python
+        - python-version: pypy-3.7
+          pyo3-python: /opt/pypy/pypy3.7-7.3.3/bin/python
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
         submodules: true
-    - name: Install build requirements
-      run: python -m pip install -r ci/requirements.txt
     - name: Build manylinux wheels
-      uses: RalfG/python-wheels-manylinux-build@v0.3.3
+      uses: addnab/docker-run-action@v2
       with:
-        build-requirements: 'setuptools'
-        python-versions: 'cp35-cp35m cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+        image: pypywheels/manylinux2010-pypy_x86_64
+        options: -v ${{ github.workspace }}:/io -e TERM=$TERM
+        shell: bash
+        run: |
+          ${{ matrix.pyo3-python }} -m pip install -U -r /io/ci/requirements.txt
+          ${{ matrix.pyo3-python }} -m pip wheel -vv /io -w /tmp
+          for whl in /tmp/*.whl; do ${{ matrix.pyo3-python }} -m auditwheel repair $whl -w /io/dist; done
     - name: Store built wheels
       uses: actions/upload-artifact@v2
       with:
@@ -103,8 +123,6 @@ jobs:
       with:
           name: dist
           path: dist
-    - name: Remove unsupported wheels
-      run: rm dist/*-linux_x86_64.whl
     - name: Publish distributions to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
       uses: pypa/gh-action-pypi-publish@master
