--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -63,6 +63,20 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Cache Python requirements
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ matrix.python-version }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    - name: Cache built C files
+      uses: actions/cache@v2
+      with:
+        path: build
+        key: ${{ runner.os }}-build-${{ hashFiles('Prodigal/*') }}
+        restore-keys: |
+          ${{ runner.os }}-build-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
