--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -58,6 +58,8 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - pypy-3.6
+        - pypy-3.7
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -81,10 +83,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install build package
-      run: python -m pip install -U build pip setuptools
+    - name: Install Python requirements
+      run: python -m pip install --only-binary numpy -r ci/requirements.txt
     - name: Build wheel distribution
-      run: python -m build --wheel --outdir dist
+      run: python -m setup.py bdist_wheel
     - name: Store built wheels
       uses: actions/upload-artifact@v2
       with:
