--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -84,9 +84,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Python requirements
-      run: python -m pip install --only-binary numpy -r ci/requirements.txt
+      run: python -m pip install -r ci/requirements.txt
     - name: Build wheel distribution
-      run: python -m setup.py bdist_wheel
+      run: python setup.py bdist_wheel
     - name: Store built wheels
       uses: actions/upload-artifact@v2
       with:
