--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Update pip
       run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
-      run: python -m pip install --only-binary numpy -r ci/requirements.txt
+      run: python -m pip install -r ci/requirements.txt
     - name: Build C extension
       run: python setup.py build_ext --inplace --debug
     - name: Test with coverage
@@ -129,7 +129,7 @@ jobs:
     - name: Update pip
       run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
-      run: python -m pip install --only-binary numpy -r ci/requirements.txt
+      run: python -m pip install -r ci/requirements.txt
     - name: Build C extension
       run: python setup.py build_ext --inplace --debug
     - name: Test with coverage
