--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ project_urls =
 
 [options]
 zip_safe = false
-packages = pyrodigal
+packages = pyrodigal, pyrodigal.tests
 include_package_data = true
 python_requires = >=3.5
 setup_requires =
@@ -44,6 +44,7 @@ setup_requires =
 
 [options.package_data]
 pyrodigal = py.typed, *.pyi
+pyrodigal.tests = data/*
 
 [coverage:run]
 plugins = Cython.Coverage
