--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -47,6 +47,36 @@ jobs:
         name: dist
         path: dist/*
 
+  test-linux:
+    runs-on: ubuntu-latest
+    name: Test Linux wheels
+    needs:
+    - wheel-linux
+    strategy:
+      matrix:
+        include:
+          - python-version: 3.5
+          - python-version: 3.6
+          - python-version: 3.7
+          - python-version: 3.8
+          - python-version: 3.9
+          - python-version: pypy-3.6
+          - python-version: pypy-3.7
+    steps:
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Download built wheels
+      uses: actions/download-artifact@v2
+      with:
+          name: dist
+          path: dist
+    - name: Install built wheel
+      run: python -m pip install --no-index --find-links=dist pyrodigal
+    - name: Run tests without coverage
+      run: python -m unittest pyrodigal.tests -vv
+
   wheel-osx:
     runs-on: macos-latest
     name: Build OSX wheels
@@ -93,6 +123,36 @@ jobs:
         name: dist
         path: dist/*
 
+  test-osx:
+    runs-on: macos-latest
+    name: Test OSX wheels
+    needs:
+    - wheel-osx
+    strategy:
+      matrix:
+        include:
+          - python-version: 3.5
+          - python-version: 3.6
+          - python-version: 3.7
+          - python-version: 3.8
+          - python-version: 3.9
+          - python-version: pypy-3.6
+          - python-version: pypy-3.7
+    steps:
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Download built wheels
+      uses: actions/download-artifact@v2
+      with:
+          name: dist
+          path: dist
+    - name: Install built wheel
+      run: python -m pip install --no-index --find-links=dist pyrodigal
+    - name: Run tests without coverage
+      run: python -m unittest pyrodigal.tests -vv
+
   sdist:
     runs-on: ubuntu-latest
     name: Build source distribution
@@ -122,18 +182,10 @@ jobs:
     needs:
     - sdist
     - wheel-linux
+    - test-linux
     - wheel-osx
+    - test-osx
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v1
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.9
-    - name: Install build package
-      run: python -m pip install -U build
-    - name: Build source tarball
-      run: python -m build --sdist --outdir dist
     - name: Download built wheels
       uses: actions/download-artifact@v2
       with:
