Update keys to use underscore variants in `setup.cfg`

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,10 +2,10 @@
 name = pyrodigal
 version = attr: pyrodigal.__version__
 author = Martin Larralde
-author-email = martin.larralde@embl.de
-home-page = https://github.com/althonos/pyrodigal
+author_email = martin.larralde@embl.de
+home_page = https://github.com/althonos/pyrodigal
 description = Python interface to Prodigal, an ORF finder for genomes, progenomes and metagenomes.
-long-description = file: README.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPLv3
 platform = any
