--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,15 +45,13 @@ jobs:
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        restore-keys: ${{ runner.os }}-pip-${{ matrix.python-version }}
     - name: Cache built C files
       uses: actions/cache@v2
       with:
         path: build
-        key: ${{ runner.os }}-build-${{ hashFiles('Prodigal/*') }}
-        restore-keys: |
-          ${{ runner.os }}-build-
+        key: ${{ runner.os }}-build-${{ matrix.python-version }}
+        restore-keys: ${{ runner.os }}-build-${{ matrix.python-version }}
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -113,15 +111,13 @@ jobs:
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        restore-keys: ${{ runner.os }}-pip-${{ matrix.python-version }}
     - name: Cache built C files
       uses: actions/cache@v2
       with:
         path: build
-        key: ${{ runner.os }}-build-${{ hashFiles('Prodigal/*') }}
-        restore-keys: |
-          ${{ runner.os }}-build-
+        key: ${{ runner.os }}-build-${{ matrix.python-version }}
+        restore-keys: ${{ runner.os }}-build-${{ matrix.python-version }}
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -135,6 +131,67 @@ jobs:
     - name: Test with coverage
       run: python -m coverage run -m unittest discover -vv
     - uses: codecov/codecov-action@v1
+      with:
+        flags: ${{ matrix.python-impl }},${{ matrix.python-release }},${{ env.OS }}
+        name: test-python-${{ matrix.python-version }}
+        fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
+
+  test_windows:
+    name: Test (Windows)
+    runs-on: windows-latest
+    env:
+      OS: Windows
+    strategy:
+      matrix:
+        include:
+        - python-version: 3.5
+          python-release: v3.5
+          python-impl: CPython
+        - python-version: 3.6
+          python-release: v3.6
+          python-impl: CPython
+        - python-version: 3.7
+          python-release: v3.7
+          python-impl: CPython
+        - python-version: 3.8
+          python-release: v3.8
+          python-impl: CPython
+        - python-version: 3.9
+          python-release: v3.9
+          python-impl: CPython
+        - python-version: pypy-3.6
+          python-release: v3.6
+          python-impl: PyPy
+        - python-version: pypy-3.7
+          python-release: v3.7
+          python-impl: PyPy
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+    - name: Cache built C files
+      uses: actions/cache@v2
+      with:
+        path: build
+        key: ${{ runner.os }}-build-${{ matrix.python-version }}
+        restore-keys: ${{ runner.os }}-build-${{ matrix.python-version }}
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        architecture: x64
+    - name: Update pip
+      run: python -m pip install -U pip wheel setuptools
+    - name: Install Python requirements
+      run: python -m pip install -r ci/requirements.txt
+    - name: Build C extension
+      run: python setup.py build_ext --inplace
+    - name: Test with coverage
+      run: python -m coverage run -m unittest discover -vv
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v1
       with:
         flags: ${{ matrix.python-impl }},${{ matrix.python-release }},${{ env.OS }}
         name: test-python-${{ matrix.python-version }}
