--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,5 +6,5 @@ recursive-include pyrodigal/tests      *.py *.txt
 recursive-include pyrodigal/tests/data *
 
 recursive-include Prodigal *.c *.h *.md VERSION LICENSE CHANGES Makefile
-recursive-include pyrodigal *.py *.pyi *.pyx *.pxd _version.txt py.typed
+recursive-include pyrodigal *.py *.pyi *.pyx *.pxd *.h py.typed
 recursive-exclude pyrodigal *.c
