Fix new `manylinux2010` image not shipping Python 3.5 anymore

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,18 +15,25 @@ jobs:
         include:
         - python-version: 3.5
           pyo3-python: /opt/python/cp35-cp35m/bin/python
+          image-tag: 2020-12-11-f1e0e80
         - python-version: 3.6
           pyo3-python: /opt/python/cp36-cp36m/bin/python
+          image-tag: 2021-05-18-1e72e6c
         - python-version: 3.7
           pyo3-python: /opt/python/cp37-cp37m/bin/python
+          image-tag: latest
         - python-version: 3.8
           pyo3-python: /opt/python/cp38-cp38/bin/python
+          image-tag: latest
         - python-version: 3.9
           pyo3-python: /opt/python/cp39-cp39/bin/python
+          image-tag: latest
         - python-version: pypy-3.6
           pyo3-python: /opt/pypy/pypy3.6-7.3.3/bin/python
+          image-tag: 2021-05-18-1e72e6c
         - python-version: pypy-3.7
           pyo3-python: /opt/pypy/pypy3.7-7.3.4/bin/python
+          image-tag: 2021-05-18-1e72e6c
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -35,7 +42,7 @@ jobs:
     - name: Build manylinux wheels
       uses: addnab/docker-run-action@v2
       with:
-        image: pypywheels/manylinux2010-pypy_x86_64
+        image: pypywheels/manylinux2010-pypy_x86_64:${{ matrix.image-tag }}
         options: -v ${{ github.workspace }}:/io -e TERM=$TERM
         shell: bash
         run: |
