Relax the GIL when making a bitmap from a text sequence

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: pyrodigal.__version__
 author = Martin Larralde
 author_email = martin.larralde@embl.de
 home_page = https://github.com/althonos/pyrodigal
-description = Python interface to Prodigal, an ORF finder for genomes, progenomes and metagenomes.
+description = Cython bindings and Python interface to Prodigal, an ORF finder for genomes and metagenomes.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPLv3
