--- a/setup.cfg
+++ b/setup.cfg
@@ -72,3 +72,4 @@ disallow_untyped_defs = true
 ignore_missing_imports = true
 warn_unused_ignores = true
 warn_return_any = true
+exclude = pyrodigal/tests/*
