--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,6 +118,8 @@ jobs:
         path: build
         key: ${{ runner.os }}-build-${{ matrix.python-version }}
         restore-keys: ${{ runner.os }}-build-${{ matrix.python-version }}
+    - name: Install OpenMP library
+      run: brew install libomp llvm
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -128,6 +130,9 @@ jobs:
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build C extension
       run: python setup.py build_ext --inplace --debug
+      env:
+        CC: "/usr/local/opt/llvm/bin/clang"
+        CFLAGS: "-L/usr/local/opt/llvm/lib -L/usr/local/lib"
     - name: Test with coverage
       run: python -m coverage run -m unittest discover -vv
     - uses: codecov/codecov-action@v1
