--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,8 +2,10 @@ name: Package
 
 on:
   push:
-    tags:
-      - v*.*.*
+    branch:
+      - parallel
+    # tags:
+    #   - v*.*.*
 
 jobs:
 
@@ -103,6 +105,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Install OpenMP library
+      run: brew install libomp llvm
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -111,6 +115,8 @@ jobs:
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build wheel distribution
       run: python setup.py bdist_wheel
+      env:
+        CC: "/usr/local/opt/llvm/bin/clang"
     - name: Store built wheels
       uses: actions/upload-artifact@v2
       with:
