--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -117,6 +117,7 @@ jobs:
       run: python setup.py bdist_wheel
       env:
         CC: "/usr/local/opt/llvm/bin/clang"
+        LDFLAGS: "-L/usr/local/opt/llvm/lib -L/usr/local/lib"
     - name: Store built wheels
       uses: actions/upload-artifact@v2
       with:
