--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -158,7 +158,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
-        - pypy-3.6
+        #- pypy-3.6
         - pypy-3.7
     steps:
     - name: Checkout code
@@ -193,7 +193,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
-        - pypy-3.6
+        #- pypy-3.6
         - pypy-3.7
     steps:
     - name: Setup Python ${{ matrix.python-version }}
