--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 
 ### Cython ###
 pyrodigal/*.c
+pyrodigal/*.h
 pyrodigal/*.html
+pyrodigal/*.BAK
 
 # Created by https://www.gitignore.io/api/python,c
 # Edit at https://www.gitignore.io/?templates=python,c
