--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include README.md
 recursive-include pyrodigal/tests      *.py *.txt
 recursive-include pyrodigal/tests/data *
 
-recursive-include Prodigal *.c *.h *.md VERSION LICENSE CHANGES Makefile
+recursive-include vendor/Prodigal *.c *.h *.md VERSION LICENSE CHANGES Makefile
+
 recursive-include pyrodigal *.py *.pyi *.pyx *.pxd *.h py.typed
-recursive-exclude pyrodigal *.c
+recursive-exclude pyrodigal *.c *.html
