Add more project URLs to `setup.cfg` [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pyrodigal
 version = attr: pyrodigal.__version__
 author = Martin Larralde
 author_email = martin.larralde@embl.de
-home_page = https://github.com/althonos/pyrodigal
+url = https://github.com/althonos/pyrodigal
 description = Cython bindings and Python interface to Prodigal, an ORF finder for genomes and metagenomes.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -29,10 +29,13 @@ classifier =
     Topic :: Scientific/Engineering :: Medical Science Apps.
     Typing :: Typed
 project_urls =
+    Documentation = https://pyrodigal.readthedocs.io/en/stable/
     Bug Tracker = https://github.com/althonos/pyrodigal/issues
-    CI = https://github.com/althonos/pyrodigal/actions
     Changelog = https://github.com/althonos/pyrodigal/blob/master/CHANGELOG.md
+    Coverage = https://codecov.io/gh/althonos/pyrodigal/
+    Builds = https://github.com/althonos/pyrodigal/actions
     Zenodo = https://doi.org/10.5281/zenodo.4015169
+    PyPI = https://pypi.org/project/pyrodigal
 
 [options]
 zip_safe = false
