--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build C extension
-      run: python setup.py build_ext --inplace --debug
+      run: python setup.py build_ext --inplace
     - name: Test with coverage
       run: python -m coverage run -m unittest discover -vv
     - name: Upload to Codecov
@@ -127,7 +127,7 @@ jobs:
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build C extension
-      run: python setup.py build_ext --inplace --debug
+      run: python setup.py build_ext --inplace
     - name: Test with coverage
       run: python -m coverage run -m unittest discover -vv
     - uses: codecov/codecov-action@v1
