--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,8 @@ python_requires = >=3.5
 setup_requires =
     setuptools >=46.4
     cython ~=0.29.16
+console_scripts =
+    pyrodigal = pyrodigal.cli:main
 
 [options.package_data]
 pyrodigal = py.typed, *.pyi
